[package]
name = "vodk-rs"
version = "0.0.1"
authors = ["Nicolas Silva <nical.silva@gmail.com>"]

[lib]
name = "vodk"
path = "src/vodk/lib.rs"

[[example]]
name = "cube_example"
path = "./example/cube/main.rs"

[[example]]
name = "vertex_aa"
path = "./example/vertex_aa/main.rs"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs"

[dependencies.time]
git = "http://github.com/rust-lang/time"

[dependencies.data]
path = "src/vodk/data"

[dependencies.math]
path = "src/vodk/math/"

[dependencies.gpu]
path = "src/vodk/gpu/"

[dependencies.gfx2d]
path = "src/vodk/gfx2d/"
